@@ -142,6 +142,7 @@ Dist::Zilla::Plugin::Run::AfterMint = 0
 Pod::Weaver::PluginBundle::Default = 4.000  ; contains all the things we use
 Pod::Weaver::Plugin::Transformer = 0
 Pod::Weaver::Section::Contributors = 0.008
+Pod::Weaver::Section::Legal = 4.011
 
 [Prereqs / podweaver plugin bundle (indirect)]
 -phase = runtime
