@@ -42,7 +42,7 @@ sub configure
         [ 'Region' => 'postlude' ],
         'Authors',
         [ 'Contributors' => { ':version' => '0.008' } ],
-        [ 'Legal' => { -f 'LICENCE' ? ( header => 'COPYRIGHT AND LICENCE' ) : () } ],
+        [ 'Legal' => { -f 'LICENCE' ? ( ':version' => '4.011', header => 'COPYRIGHT AND LICENCE' ) : () } ],
         [ 'Region' => 'footer' ],
     );
 }
@@ -182,6 +182,7 @@ following F<weaver.ini>, minus some optimizations:
     :version = 0.008
 
     [Legal]
+    :version = 4.011
     header = COPYRIGHT AND LICENCE ; only if file is called LICENCE
 
     [Region / footer]
