@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - declare proper prereq version for Pod::Weaver::Section::Legal
 
 0.101     2015-08-08 20:18:26Z
           - add use of the Verbatim transformer to the weaver plugin bundle
